--- a/dashboard.html
+++ b/dashboard.html
@@ -12,6 +12,18 @@
       height: 10px;
       border-radius: 9999px;
     }
+
+    .text-purple-700 {
+      color: #5238a4ff !important;
+    }
+
+    .bg-purple-700 {
+      background-color: #5238a4ff !important;
+    }
+
+    .border-purple-700 {
+      border-color: #5238a4ff !important;
+    }
   </style>
 </head>
 
@@ -52,20 +64,20 @@
   <main class="p-4">
     <h1 class="text-3xl font-bold mb-8 text-purple-700">Votre Espace Data</h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <!-- Card: Data -->
+      <a href="./dashboard/data.html">
+        <div
+          class="bg-white rounded-xl shadow hover:shadow-lg p-6 cursor-pointer transition-all border-t-4 border-purple-700">
+          <h2 class="text-xl font-semibold mb-2 text-purple-700">Data & Dashboards</h2>
+          <p class="text-gray-600">Explorez vos données, faites des dashboards et du cataloging</p>
+        </div>
+      </a>
       <!-- Card: Notebooks -->
       <a href="./dashboard/jupyter.html">
         <div
           class="bg-white rounded-xl shadow hover:shadow-lg p-6 cursor-pointer transition-all border-t-4 border-purple-700">
           <h2 class="text-xl font-semibold mb-2 text-purple-700">Notebooks</h2>
           <p class="text-gray-600">Développez et testez vos scripts data en toute liberté.</p>
-        </div>
-      </a>
-      <!-- Card: Storage -->
-      <a href="./dashboard/storage.html">
-        <div
-          class="bg-white rounded-xl shadow hover:shadow-lg p-6 cursor-pointer transition-all border-t-4 border-purple-700">
-          <h2 class="text-xl font-semibold mb-2 text-purple-700">Stockage</h2>
-          <p class="text-gray-600">Gérez et explorez vos données stockées (PostgreSQL, DuckDB...).</p>
         </div>
       </a>
       <!-- Card: Orchestrator -->
@@ -76,12 +88,20 @@
           <p class="text-gray-600">Planifiez et suivez vos pipelines de données.</p>
         </div>
       </a>
-      <!-- Card: Système -->
-      <a href="./dashboard/ingestion.html">
+      <div class="col-span-3 relative my-6">
+        <div class="absolute inset-0 flex items-center">
+          <div class="w-full border-t border-gray-200"></div>
+        </div>
+        <div class="relative flex justify-center">
+          <span class="bg-gray-50 px-4 text-sm text-gray-500">Maintenance</span>
+        </div>
+      </div>
+      <!-- Card: Storage -->
+      <a href="./dashboard/storage.html">
         <div
           class="bg-white rounded-xl shadow hover:shadow-lg p-6 cursor-pointer transition-all border-t-4 border-purple-700">
-          <h2 class="text-xl font-semibold mb-2 text-purple-700">Ingestion</h2>
-          <p class="text-gray-600">Suivre la donnée ingéré dans la data platform.</p>
+          <h2 class="text-xl font-semibold mb-2 text-purple-700">Stockage</h2>
+          <p class="text-gray-600">Gérez et explorez vos données stockées (PostgreSQL, DuckDB...).</p>
         </div>
       </a>
       <!-- Card: Monitoring -->
@@ -90,14 +110,6 @@
           class="bg-white rounded-xl shadow hover:shadow-lg p-6 cursor-pointer transition-all border-t-4 border-purple-700">
           <h2 class="text-xl font-semibold mb-2 text-purple-700">Monitoring & Accès</h2>
           <p class="text-gray-600">Managez les accès, les droits et surveillez les logs.</p>
-        </div>
-      </a>
-      <!-- Card: Support -->
-      <a href="./dashboard/data.html">
-        <div
-          class="bg-white rounded-xl shadow hover:shadow-lg p-6 cursor-pointer transition-all border-t-4 border-purple-700">
-          <h2 class="text-xl font-semibold mb-2 text-purple-700">Data & Dashboards</h2>
-          <p class="text-gray-600">Explorez vos données, faites des dashboards et du cataloging</p>
         </div>
       </a>
     </div>
