--- a/dashboard/data.html
+++ b/dashboard/data.html
@@ -1,54 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Storage Management</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/@heroicons/react/outline"></script>
-    <style>
-      .status-dot {
-        width: 10px;
-        height: 10px;
-        border-radius: 9999px;
-      }
-    </style>
-  </head>
-  <body class="bg-gray-50 text-gray-900 font-sans">
-    <!-- Header -->
-    <header class="bg-white shadow p-4 flex items-center justify-between">
-      <a href="../dashboard.html"><div class="text-2xl font-semibold text-purple-700">Data Platform</div></a>
-      <div class="flex items-center space-x-6">
-        <!-- Status Indicators -->
-        <div class="flex items-center space-x-3">
-          <div class="flex items-center space-x-1">
-            <span class="status-dot bg-green-500"></span>
-            <span class="text-sm text-gray-600">Notebooks</span>
-          </div>
-          <div class="flex items-center space-x-1">
-            <span class="status-dot bg-green-500"></span>
-            <span class="text-sm text-gray-600">Storage</span>
-          </div>
-          <div class="flex items-center space-x-1">
-            <span class="status-dot bg-green-500"></span>
-            <span class="text-sm text-gray-600">Orchestrator</span>
-          </div>
-          <div class="flex items-center space-x-1">
-            <span class="status-dot bg-green-500"></span>
-            <span class="text-sm text-gray-600">System</span>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Storage Management</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@heroicons/react/outline"></script>
+  <style>
+    .status-dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 9999px;
+    }
+
+    .text-purple-700 {
+      color: #5238a4ff !important;
+    }
+
+    .bg-purple-700 {
+      background-color: #5238a4ff !important;
+    }
+
+    .border-purple-700 {
+      border-color: #5238a4ff !important;
+    }
+  </style>
+</head>
+
+<body class="bg-gray-50 text-gray-900 font-sans">
+  <!-- Header -->
+  <header class="bg-white shadow p-4 flex items-center justify-between">
+    <a href="../dashboard.html">
+      <div class="text-2xl font-semibold text-purple-700">Data Platform</div>
+    </a>
+    <div class="flex items-center space-x-6">
+      <!-- Status Indicators -->
+      <div class="flex items-center space-x-3">
+        <div class="flex items-center space-x-1">
+          <span class="status-dot bg-green-500"></span>
+          <span class="text-sm text-gray-600">Notebooks</span>
         </div>
-        <!-- User Info -->
-        <div class="flex items-center space-x-2">
-          <div class="text-sm text-gray-800">Bienvenue, <strong>Constant</strong></div>
-          <img src="https://ui-avatars.com/api/?name=DA&background=7e22ce&color=fff" class="w-8 h-8 rounded-full" alt="avatar">
+        <div class="flex items-center space-x-1">
+          <span class="status-dot bg-green-500"></span>
+          <span class="text-sm text-gray-600">Storage</span>
+        </div>
+        <div class="flex items-center space-x-1">
+          <span class="status-dot bg-green-500"></span>
+          <span class="text-sm text-gray-600">Orchestrator</span>
+        </div>
+        <div class="flex items-center space-x-1">
+          <span class="status-dot bg-green-500"></span>
+          <span class="text-sm text-gray-600">System</span>
         </div>
       </div>
-    </header>
+      <!-- User Info -->
+      <div class="flex items-center space-x-2">
+        <div class="text-sm text-gray-800">Bienvenue, <strong>Constant</strong></div>
+        <img src="https://ui-avatars.com/api/?name=DA&background=7e22ce&color=fff" class="w-8 h-8 rounded-full"
+          alt="avatar">
+      </div>
+    </div>
+  </header>
 
-    <!-- Main Content -->
-    <main class="p-6">
-      <img src="./metabase.png">
-      </main>
-    </body>
+  <!-- Main Content -->
+  <main class="p-6">
+    <img src="./lightdash.png">
+  </main>
+</body>
+
 </html>
