Updating landing page to add the dashboard first

--- a/dashboard.html
+++ b/dashboard.html
@@ -34,22 +34,18 @@
     <div class="flex items-center space-x-6">
       <!-- Status Indicators -->
       <div class="flex items-center space-x-3">
-        <div class="flex items-center space-x-1">
+        <a href="/dashboard/jupyter.html" class="flex items-center space-x-1 hover:text-purple-700">
           <span class="status-dot bg-green-500"></span>
-          <span class="text-sm text-gray-600">Notebooks</span>
-        </div>
-        <div class="flex items-center space-x-1">
+          <span class="text-sm text-gray-600">Notebook</span>
+        </a>
+        <a href="/dashboard/data.html" class="flex items-center space-x-1 hover:text-purple-700">
           <span class="status-dot bg-green-500"></span>
-          <span class="text-sm text-gray-600">Storage</span>
-        </div>
-        <div class="flex items-center space-x-1">
+          <span class="text-sm text-gray-600">Dashboard</span>
+        </a>
+        <a href="/dashboard/airflow.html" class="flex items-center space-x-1 hover:text-purple-700">
           <span class="status-dot bg-green-500"></span>
           <span class="text-sm text-gray-600">Orchestrator</span>
-        </div>
-        <div class="flex items-center space-x-1">
-          <span class="status-dot bg-green-500"></span>
-          <span class="text-sm text-gray-600">System</span>
-        </div>
+        </a>
       </div>
       <!-- User Info -->
       <div class="flex items-center space-x-2">
