--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+lang: en
 ---
 <header class="bg-purple-700 text-white py-6 text-center">
     <h1 class="text-4xl font-bold">Our Blog</h1>
@@ -11,11 +12,13 @@ title: Blog
     <section class="py-12 px-6">
         <div class="max-w-6xl mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                {% for post in site.posts %}
-                {% if post.layout == "post" %}
+                {% assign posts = site.posts | where: "layout", "post" | group_by: "slug" %}
+                {% for post_group in posts %}
+                {% assign post = post_group.items | where: "lang", page.lang | first | default: post_group.items[0] %}
                 <div class="bg-white shadow-md rounded-lg overflow-hidden">
                     <a href="{{ post.url }}">
-                        <img src="{{ post.image | default: '/assets/img/default-thumbnail.jpg' }}" alt="{{ post.title }}" class="w-full h-48 object-cover">
+                        <img src="{{ post.image | default: '/assets/img/default-thumbnail.jpg' }}"
+                            alt="{{ post.title }}" class="w-full h-48 object-cover">
                     </a>
                     <div class="p-4">
                         <h2 class="text-xl font-semibold text-purple-700">
@@ -26,7 +29,6 @@ title: Blog
                         <a href="{{ post.url }}" class="text-purple-700 font-bold mt-4 inline-block">Read More →</a>
                     </div>
                 </div>
-                {% endif %}
                 {% endfor %}
             </div>
         </div>
