--- a/dashboard/data.html
+++ b/dashboard/data.html
@@ -61,7 +61,7 @@
 
   <!-- Main Content -->
   <main class="p-6">
-    <img src="./lightdash.png">
+    <img src="./superset.png">
   </main>
 </body>
 
