--- a/dashboard/jupyter.html
+++ b/dashboard/jupyter.html
@@ -61,7 +61,7 @@
 
   <!-- Main Content -->
   <main class="p-6">
-    <img src="./jupyterlab.png">
+    <img src="./marimo.png">
   </main>
 </body>
 
