--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@ lang: en
     <section class="py-12 px-6">
         <div class="max-w-6xl mx-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                {% assign posts = site.posts | where: "layout", "post" | group_by: "slug" %}
+                {% assign posts = site.posts | group_by: "slug" %}
                 {% for post_group in posts %}
                 {% assign post = post_group.items | where: "lang", page.lang | first | default: post_group.items[0] %}
                 <div class="bg-white shadow-md rounded-lg overflow-hidden">
